<?xml version="1.0"?>
<package format="2">
  <name>eyes_emergency</name>
  <version>0.0.0</version>
  <description>The eyes_emergency package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tejas@todo.todo">tejas</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>OpenCV</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>


  
  <export>
  </export>
</package>
